# test_autogen_magentic_one

./: README.md  openai.sample.json  pyproject.toml
